<resources>
    <string name="app_name">Lonely Blender Navigation Graph</string>
    <string name="title_page_name">Welcome to Lonely Blender app</string>
    <string name="create_account_button">Create Account</string>
    <string name="surname_text_view">Surname</string>
    <string name="first_name_text_view">First Name</string>
    <string name="whats_your_name_text_view">What is your name?</string>
    <string name="and_your_email">And, your email?</string>
    <string name="email">Email Address</string>
    <string name="create_a_password">Create a password</string>
    <string name="password">Password</string>
    <string name="well_done_message">Well done!<br/> Sign up complete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>