<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_background">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_to_welcome_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:icon="@drawable/ic_baseline_chevron_left_24"
        app:iconSize="@dimen/button_icon_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/well_done_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content_left"
        android:layout_marginTop="@dimen/margin_top_title_to_parent"
        android:text="@string/well_done_message"
        android:textSize="@dimen/large_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name_final_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content_left"
        android:layout_marginTop="@dimen/circle_button_top_margin"
        android:text="@string/first_name_text_view"
        android:textSize="@dimen/mid_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/well_done_text_view" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name_final_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:layout_marginLeft="@dimen/margin_content_left"
        android:layout_marginRight="@dimen/margin_content_left"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_final_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/surname_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content_left"
        android:layout_marginTop="@dimen/create_account_button_margin_top"
        android:text="@string/surname_text_view"
        android:textSize="@dimen/mid_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_final_edit_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/surname_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:layout_marginLeft="@dimen/margin_content_left"
        android:layout_marginRight="@dimen/margin_content_left"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/email_final_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_content_left"
        android:layout_marginTop="@dimen/create_account_button_margin_top"
        android:text="@string/email"
        android:textSize="@dimen/mid_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surname_et" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_final_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:layout_marginLeft="@dimen/margin_content_left"
        android:layout_marginRight="@dimen/margin_content_left"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_final_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/password_final_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_content_left"
        android:layout_marginTop="@dimen/create_account_button_margin_top"
        android:text="@string/password"
        android:textSize="@dimen/mid_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_final_edit_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_final_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:layout_marginLeft="@dimen/margin_content_left"
        android:layout_marginRight="@dimen/margin_content_left"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_final_text_view" />


</androidx.constraintlayout.widget.ConstraintLayout>